<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="br.com.fundatec.fundatecheroes.MainViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/Qual_nome"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sbv"
            android:textSize="50sp"
            android:visibility="gone"

            app:layout_constraintBottom_toTopOf="@id/tv_hello"
            app:layout_constraintEnd_toEndOf="@id/tv_hello"
            app:layout_constraintStart_toStartOf="@id/tv_hello"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Qual_nome"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/et_name"
            app:layout_constraintEnd_toEndOf="@+id/et_name"
            app:layout_constraintStart_toStartOf="@+id/et_name"
            app:layout_constraintTop_toBottomOf="@id/Qual_nome" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/ok_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Okay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/clear_button"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            app:layout_constraintEnd_toStartOf="@+id/ok_button"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>